(嵌入式): 滚动条css 样式加上我们的类名，避免在 div 嵌入时冲突 #16455

--- a/core/core-frontend/index.html
+++ b/core/core-frontend/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="height:100%">
-  <div id="app" style="height: 100%;"></div>
+  <div class="de-main_scrollbar" id="app" style="height: 100%;"></div>
   <script type="module" src="/src/pages/index/main.ts"></script>
 </body>
 
